{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 8,
  "lineage": "2e8a95c8-4043-04ad-8148-ddf651245962",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360378364434:security-group/sg-0238d13bb461abbb4",
            "description": "launch-wizard created 2022-04-14T04:59:09.402Z",
            "filter": null,
            "id": "sg-0238d13bb461abbb4",
            "name": "launch-wizard-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c8511e69c68ebe19"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012967cc5a8c9f891",
            "arn": "arn:aws:ec2:us-east-1:360378364434:instance/i-0b23729f398f4097e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b23729f398f4097e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0474ef14147cd92c7",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.15",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07634bc48c1796996",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008f139b69a07aca3",
            "tags": {
              "Environment": "Test",
              "Name": "test-instance",
              "Project": "TerraformExample"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "test-instance",
              "Project": "TerraformExample"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "Test",
              "Name": "test-instance-Disk",
              "Project": "TerraformExample"
            },
            "vpc_security_group_ids": [
              "sg-0238d13bb461abbb4"
            ]
          },
          "dependencies": [
            "data.aws_security_group.existing_sg",
            "module.key-pair.aws_key_pair.new_key_pair",
            "module.key-pair.data.aws_key_pair.existing_key"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:360378364434:security-group/sg-0238d13bb461abbb4",
            "description": "launch-wizard created 2022-04-14T04:59:09.402Z",
            "filter": null,
            "id": "sg-0238d13bb461abbb4",
            "name": "launch-wizard-1",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c8511e69c68ebe19"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}